# lrpc

./: .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  CLEANUP.md  FINAL_WORK_SUMMARY.md  Makefile  README.md  app.go  app_routing.go  app_routing_test.go  client.go  config.go  coverage_cache.out  coverage_new.html  coverage_report.html  ctx.go  docker-compose.test.yml  go.mod  go.sum  handle.go  handler.go  header.go  hook.go  llms.txt  log.go  middleware.go  middleware_error.go  middleware_health.go  middleware_metrics.go  middleware_recover.go  middleware_recover_test.go  middleware_security.go  path.go  pyproject.toml  route.go  route_test.go  server.go  server_test.go  tree.go  (+2 more)
.claude/: .gitignore  settings.json
.claude/scripts/: hooks.py
.github/workflows/: lint.yml
.lazygophers/: .gitignore
middleware/auth/: basic.go  basic_test.go  jwt.go  jwt_test.go  wrapper.go
middleware/cache/: http_cache.go  http_cache_test.go  wrapper.go
middleware/compress/: compress.go  compress_test.go  wrapper.go
middleware/config/: config.go
middleware/core/: core.pb.go  core.proto  discovery.go  list_option.go  list_option_test.go
middleware/errors/: errors.go
middleware/grpc/: bridge.go  client.go  grpc_test.go
middleware/health/: health.go  health_test.go  wrapper.go
middleware/i18n/: benchmark_test.go  i18n.go  i18n_benchmark_test.go  i18n_test.go  language.go  language_test.go  localizer.go  localizer_test.go  utils.go  utils_test.go  xerror.go  xerror_test.go
middleware/language/: language.go  language_constants.go  (+3 more)
scripts/: run-mongo-tests.sh
(+348 files in other folders)
